updating sprint